--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "body-parser": "^1.15.2",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
     "express": "^4.12.4",
     "mongodb": "^6.16.0",
     "mongoose": "^5.11.15"
@@ -22,5 +22,8 @@
     "mongoose",
     "express"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/dotenv": "^6.1.1"
+  }
 }
